# newsapi

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRESENTATION.md
notebooks/: inspect.ipynb  test_newsapi.ipynb
src/newsapi/defs/: assets.py
src/newsapi_dentsu/: definitions.py
src/newsapi_dentsu/defs/: assets.py  resources.py  schedules.py  sensors.py
tests/: conftest.py  test_assets.py
tests/fixtures/: sample_news.json
